Expose quicklook route with accompanying tests
